Add new ClinVarData.ReviewStatus enum in place of the string value Alter ClinVarData reviewStatus to return ClinVarData.ReviewStatus The new ClinVarData.ReviewStatus saves about 10% disk space for the new ClinVarAlleleStore compared to the original string representation.