@@ -20,7 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.model;
 
-import com.google.common.collect.ImmutableMap;
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.exomiser.core.genome.TestFactory;
@@ -30,6 +29,7 @@ import org.monarchinitiative.exomiser.core.model.frequency.FrequencySource;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.ClinVarData;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicityData;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicityScore;
+import org.monarchinitiative.exomiser.core.proto.AlleleData;
 import org.monarchinitiative.exomiser.core.proto.AlleleProto;
 import org.monarchinitiative.exomiser.core.proto.AlleleProto.AlleleProperties;
 import org.monarchinitiative.exomiser.core.proto.AlleleProto.ClinVar;
@@ -65,12 +65,13 @@ public class AlleleProtoAdaptorTest {
     @Test
     public void testToFreqData() {
         AlleleProperties alleleProperties = AlleleProperties.newBuilder()
-                .putProperties("KG", 0.7f)
-                .putProperties("TOPMED", 0.05f)
+                // 100f * (ac / (float) an);
+                .addFrequencies(AlleleData.frequencyOf(AlleleProto.FrequencySource.KG, 4, 1000))
+                .addFrequencies(AlleleData.frequencyOf(AlleleProto.FrequencySource.TOPMED, 200, 400000))
                 .build();
         assertThat(AlleleProtoAdaptor.toFrequencyData(alleleProperties),
                 equalTo(FrequencyData.of(
-                    Frequency.of(FrequencySource.THOUSAND_GENOMES, 0.7f),
+                    Frequency.of(FrequencySource.THOUSAND_GENOMES, 0.4f),
                     Frequency.of(FrequencySource.TOPMED, 0.05f))
                 )
         );
@@ -78,61 +79,89 @@ public class AlleleProtoAdaptorTest {
 
     @Test
     public void testToPathDataSift() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("SIFT", 0.2f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.SIFT, 0.2f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(SIFT, 0.2f))));
     }
 
     @Test
     public void testToPathDataPolyphen() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("POLYPHEN", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.POLYPHEN, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(POLYPHEN, 0.7f))));
     }
 
     @Test
     public void testToPathDataMutationTaster() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("MUT_TASTER", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.MUTATION_TASTER, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(MUTATION_TASTER, 0.7f))));
     }
 
     @Test
     public void testToPathDataRevel() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("REVEL", 0.2f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.REVEL, 0.2f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(REVEL, 0.2f))));
     }
 
     @Test
     public void testToPathDataMcap() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("MCAP", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.M_CAP, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(M_CAP, 0.7f))));
     }
 
     @Test
     public void testToPathDataMpc() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("MPC", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.MPC, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(MPC, 0.7f))));
     }
 
     @Test
     public void testToPathDataMvp() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("MVP", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.MVP, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(MVP, 0.7f))));
     }
 
     @Test
     public void testToPathDataPrimateAi() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("PRIMATE_AI", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.PRIMATE_AI, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(PRIMATE_AI, 0.7f))));
     }
 
     @Test
+    public void testToPathDataSpliceAi() {
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.SPLICE_AI, 0.7f))
+                .build();
+        assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(SPLICE_AI, 0.7f))));
+    }
+
+    @Test
     public void testToPathDataRemm() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("REMM", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.REMM, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(REMM, 0.7f))));
     }
 
     @Test
     public void testToPathDataCadd() {
-        AlleleProperties alleleProperties = AlleleProperties.newBuilder().putProperties("CADD", 0.7f).build();
+        AlleleProperties alleleProperties = AlleleProperties.newBuilder()
+                .addPathogenicityScores(AlleleData.pathogenicityScoreOf(AlleleProto.PathogenicitySource.CADD, 0.7f))
+                .build();
         assertThat(AlleleProtoAdaptor.toPathogenicityData(alleleProperties), equalTo(PathogenicityData.of(PathogenicityScore.of(CADD, 0.7f))));
     }
 
@@ -153,7 +182,7 @@ public class AlleleProtoAdaptorTest {
                 .addSecondaryInterpretations(ClinVar.ClinSig.BENIGN_OR_LIKELY_BENIGN)
                 .addSecondaryInterpretations(ClinVar.ClinSig.BENIGN)
                 .putIncludedAlleles("54321", ClinVar.ClinSig.ASSOCIATION)
-                .setReviewStatus("conflicting evidence")
+                .setReviewStatus(ClinVar.ReviewStatus.CRITERIA_PROVIDED_CONFLICTING_INTERPRETATIONS)
                 .putAllClinSigCounts(Map.of(ClinVar.ClinSig.PATHOGENIC.toString(), 5, ClinVar.ClinSig.UNCERTAIN_SIGNIFICANCE.toString(), 1))
                 .build();
 
@@ -165,8 +194,8 @@ public class AlleleProtoAdaptorTest {
                         ClinVarData.ClinSig.UNCERTAIN_SIGNIFICANCE,
                         ClinVarData.ClinSig.BENIGN_OR_LIKELY_BENIGN,
                         ClinVarData.ClinSig.BENIGN))
-                .includedAlleles(ImmutableMap.of("54321", ClinVarData.ClinSig.ASSOCIATION))
-                .reviewStatus("conflicting evidence")
+                .includedAlleles(Map.of("54321", ClinVarData.ClinSig.ASSOCIATION))
+                .reviewStatus(ClinVarData.ReviewStatus.CRITERIA_PROVIDED_CONFLICTING_INTERPRETATIONS)
                 .conflictingInterpretationCounts(Map.of(ClinVarData.ClinSig.PATHOGENIC, 5, ClinVarData.ClinSig.UNCERTAIN_SIGNIFICANCE, 1))
                 .build();
 
